# pdfeditorbyjules

./: .gitignore  AGENTS.md  TEAMS-COMMANDS.md
demo_apps/android/: settings.gradle.kts
demo_apps/web/: package-lock.json  package.json
docs/: book.toml
docs/src/: SUMMARY.md  api-reference.md  code-examples.md  core-concepts.md  getting-started.md  memory-management.md
management/: CTO.md  PROGRESS.md  ROADMAP-ADOBE-PARITY.md
management/decisions/: ADR-001-language-choice.md
management/product/: PRD-001-Commercial-SDK-V1.md
management/qa/: TEST-PLAN-001-Core-Engine.md  TEST-PLAN-002-Mobile-Bindings.md
management/rfc/: RFC-002-ffi-boundary-design.md
management/tasks/: TASK-001-pdf-file-validation.md  TASK-002-xref-table-parser.md  TASK-003-basic-object-model.md  TASK-004-get-object-io.md  TASK-005-lexer.md  TASK-006-parser.md  TASK-007-flatedecode.md  TASK-008-catalog-page-tree.md  TASK-009-content-streams.md  TASK-010-graphics-state.md  TASK-011-text-extraction.md  TASK-012-text-edit-api.md  TASK-013-incremental-update.md  TASK-014-full-rewrite.md  TASK-015-ffi-boundary.md  TASK-016-ffi-methods.md  TASK-019-rendering.md  TASK-020-graphics-state-map.md  TASK-TEMPLATE.md  (+8 more)
pdf_engine_core/: Cargo.toml
pdf_engine_core/src/: ast_parser.rs  catalog.rs  color.rs  content.rs  crypto.rs  document.rs  edit.rs  error.rs  ffi.rs  filter.rs  font.rs  graphics.rs  image.rs  lexer.rs  lib.rs  object.rs  parser.rs  pdfium_bridge.rs  render.rs  save.rs  xref.rs
pdf_engine_core/tests/: e2e_workflow_test.rs
sdk_bindings/web/: Cargo.toml
sdk_bindings/web/src/: lib.rs
(+21 files in other folders)
