[package]
name = "pdf_engine_core"
version = "0.1.0"
edition = "2021"
description = "Proprietary high-performance, memory-safe PDF SDK built from scratch."

[dependencies]
flate2 = "1"
rayon = "1"
aes = "0.8"
md-5 = "0.10"
sha2 = "0.10"
crc32fast = "1"
thiserror = "1"
log = "0.4"
tempfile = "3.27.0"
tiny-skia = "0.12.0"
jpeg-decoder = "0.3.2"
ttf-parser = "0.25.1"
rc4 = "0.2.0"
cbc = "0.2.0"

[dev-dependencies]
tempfile = "3.27.0"

[lib]
crate-type = ["rlib", "cdylib"]
